--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.24.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "core-js": "^3.36.0",
     "graphql": "^16.8.1",
-    "meteor-node-stubs": "^1.2.7",
+    "meteor-node-stubs": "^1.2.10",
     "moment": "^2.30.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
@@ -20,7 +21,8 @@
     "sweetalert": "^2.1.2",
     "uniforms": "^3.10.2",
     "uniforms-bootstrap5": "^3.10.2",
-    "uniforms-bridge-simple-schema-2": "^3.10.2"
+    "uniforms-bridge-simple-schema-2": "^3.10.2",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.10",
