Login Testing and Simple UI Adjustment
- Adjusted visual elements in SignIn and SignUp pages for better visual clarity
- Fixed broken NavBar link to homepage when clicking SpireBooks logo
- Enhanced visual clarity of login and signing out buttons
- Fixed credential information in testing code to reflect default database data

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,8 +1,8 @@
 {
   "defaultAccounts": [
-    { "email": "accountant@spirebooks.com", "password": "changeme", "role": "ADMIN", "firstName": "first_name_admin", "lastName": "last_name_admin"
+    { "email": "accountant@spirebooks.com", "password": "spirebooksadmin", "role": "ADMIN", "firstName": "first_name_admin", "lastName": "last_name_admin"
     },
-    { "email": "customer@spirebooks.com", "password": "changeme", "role": "USER" , "firstName": "first_name_customer", "lastName": "last_name_customer" }
+    { "email": "customer@spirebooks.com", "password": "spirebookscustomer", "role": "USER" , "firstName": "first_name_customer", "lastName": "last_name_customer" }
   ],
 
   "defaultData": [
