--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.22.2",
     "react-router-dom": "^6.22.2",
+    "react-spreadsheet": "^0.9.5",
     "recharts": "^2.12.7",
     "simpl-schema": "^3.4.6",
     "sweetalert": "^2.1.2",
