--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.24.0",
+    "@trimbleinc/modus-react-bootstrap": "^1.2.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
     "core-js": "^3.36.0",
     "file-type-checker": "^1.1.2",
@@ -16,6 +18,7 @@
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router": "^6.22.2",
     "react-router-dom": "^6.22.2",
     "react-spreadsheet": "^0.9.5",
