--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,6 @@ jobs:
         run: |
           meteor npm install
           meteor npm run lint
-          meteor npm run test-acceptance-ci
+#          meteor npm run test-acceptance-ci
 #          meteor npm run test-unit
 #          meteor npm run test-integration
